==> vacmg/PurifyMyWater/Source/Tests/UNOTFTSCREEN/3.95inch_Arduino_8BIT_Module_ST7796S_MAR3954_V1.0/1-Demo/Demo_STM32/Demo_STM32F103ZET6_8BIT_IO_Simulation/HARDWARE/LCD/lcd.c <==
#include "lcd.h"
#include "stdlib.h"
#include "delay.h"

void LCD_ReadReg(u16 LCD_Reg,u8 *Rval,int n)
{
	LCD_WR_REG(LCD_Reg); 
	GPIOF->CRL=0X88888888; //PF0-7  上拉输入
	GPIOF->CRH=0X88888888; //PF8-15 上拉输入
	//GPIOF->ODR=0XFFFF;     //全部输出高
	while(n--)
	{		
		*(Rval++) = LCD_RD_DATA();
		delay_us(100);
	}
	
	GPIOF->CRL=0X33333333; 		//PF0-7  上拉输出
	GPIOF->CRH=0X33333333; 		//PF8-15 上拉输出
	GPIOF->ODR=0XFFFF;    		//全部输出高  
}

u16 LCD_ReadPoint(u16 x,u16 y)
{
	u16 color;
	if(x>=lcddev.width||y>=lcddev.height)
	{
		return 0;	//超过了范围,直接返回	
	}
	LCD_SetCursor(x,y);//设置光标位置 
	LCD_ReadRAM_Prepare();
	GPIOF->CRL=0X88888888; //PF0-7  上拉输入
	GPIOF->CRH=0X88888888; //PF8-15 上拉输入
	GPIOF->ODR=0XFFFF;     //全部输出高
	
	color = Lcd_ReadData_16Bit();
	
	GPIOF->CRL=0X33333333; 		//PF0-7  上拉输出
	GPIOF->CRH=0X33333333; 		//PF8-15 上拉输出
	GPIOF->ODR=0XFFFF;    		//全部输出高  
	return color;
}

void LCD_GPIOInit(void)
{
	GPIO_InitTypeDef  GPIO_InitStructure;
	      
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOC|RCC_APB2Periph_GPIOF|RCC_APB2Periph_AFIO,ENABLE);
	GPIO_PinRemapConfig(GPIO_Remap_SWJ_JTAGDisable , ENABLE);
	
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_10| GPIO_Pin_7| GPIO_Pin_8| GPIO_Pin_9 | GPIO_Pin_6; //GPIOC10,6,7,8,9
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;   //推挽输出
	GPIO_Init(GPIOC, &GPIO_InitStructure);	
	GPIO_SetBits(GPIOC,GPIO_Pin_10|GPIO_Pin_7|GPIO_Pin_8|GPIO_Pin_9|GPIO_Pin_6);
	
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_All;	//  
	GPIO_Init(GPIOF, &GPIO_InitStructure); //GPIOF
	GPIO_SetBits(GPIOF,GPIO_Pin_All);	
}
